--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^3.0.0",
     "jquery": "^3.2.1",
+    "js-cookie": "^2.1.4",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
@@ -65,6 +66,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "lolex": "^1.5.2",
+    "md5": "^2.2.1",
     "mocha": "^3.2.0",
     "nightwatch": "^0.9.12",
     "opn": "^4.0.2",
